ja/4.0/admin/webAuthentication-guide.rst
======================
ウェブ認証に関する設定
======================

ウェブ認証に関する設定
======================

ここでは、ウェブを対象としたクロールに対してウェブ認証が必要な場合の設定方法について説明します。
|Fess| は BASIC 認証と DIGEST 認証に対するクロールに対応しています。

設定方法
--------

管理者アカウントでログイン後、メニューのウェブ認証をクリックします。

|image0|

ホスト名
--------

認証が必要なサイトのホスト名を指定します。
省略した場合は、指定したウェブクロール設定において、任意のホスト名で適用されます。

ポート
------

認証が必要なサイトのポートを指定します。
すべてのポートに対して適用したい場合は -1 を指定します。
その場合は、指定したウェブクロール設定において、任意のポートで適用されます。

レルム
------

認証が必要なサイトのレルム名を指定します。
省略した場合は、指定したウェブクロール設定において、任意のレルム名で適用されます。

認証方法
--------

認証方法を選択します。 BASIC 認証、DIGEST 認証または NTLM
認証を利用することができます。

ユーザー名
----------

認証サイトにログインするためのユーザー名を指定します。

パスワード
----------

認証サイトにログインするためのパスワードを指定します。

パラメーター
------------

認証サイトにログインするために必要な設定値がある場合に設定します。NTLM認証の場合、workstationとdomainの値を設定することができます。設定する場合には以下のように記述します。

::

    workstation=HOGE
    domain=FUGA

ウェブ設定名
------------

上記の認証設定を適用するウェブ設定名を選択します。
ウェブクロール設定を事前に登録しておく必要があります。

.. |image0| image:: ../../../resources/images/ja/4.0/webAuthentication-1.png
